# application/shop/internal/server/http.go
@@ -1,21 +1,61 @@
 package server
 
 import (
-	v1 "shop/api/helloworld/v1"
+	"context"
+	"github.com/go-kratos/kratos/v2/middleware/auth/jwt"
+	"github.com/go-kratos/kratos/v2/middleware/logging"
+	"github.com/go-kratos/kratos/v2/middleware/selector"
+	"github.com/go-kratos/kratos/v2/middleware/validate"
+	"github.com/gorilla/handlers"
 	"shop/internal/conf"
 	"shop/internal/service"
 
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
+
+	jwt2 "github.com/golang-jwt/jwt/v4"
+
+	v1 "shop/api/shop/v1"
 )
 
-// NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+// NewWhiteListMatcher 设置白名单，不需要 token 验证的接口
+func NewWhiteListMatcher() selector.MatchFunc {
+	whiteList := make(map[string]struct{})
+	whiteList["/shop.shop.v1.Shop/Captcha"] = struct{}{}
+	whiteList["/shop.shop.v1.Shop/Login"] = struct{}{}
+	whiteList["/shop.shop.v1.Shop/Register"] = struct{}{}
+	return func(ctx context.Context, operation string) bool {
+		if _, ok := whiteList[operation]; ok {
+			return false
+		}
+		return true
+	}
+}
+
+func NewHTTPServer(
+	c *conf.Server,
+	ac *conf.Auth,
+	s *service.ShopService,
+	logger log.Logger,
+) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
+			validate.Validator(), // 接口访问的参数校验
+			selector.Server( // jwt 验证
+				jwt.Server(func(token *jwt2.Token) (interface{}, error) {
+					return []byte(ac.JwtKey), nil
+				}, jwt.WithSigningMethod(jwt2.SigningMethodHS256)),
+			).Match(NewWhiteListMatcher()).Build(),
+			logging.Server(logger),
+			// tracing.Server(), // 链路追踪
 		),
+		http.Filter(handlers.CORS( // 浏览器跨域
+			handlers.AllowedHeaders([]string{"X-Requested-With", "Content-Type", "Authorization"}),
+			handlers.AllowedMethods([]string{"GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"}),
+			handlers.AllowedOrigins([]string{"*"}),
+		)),
 	}
 	if c.Http.Network != "" {
 		opts = append(opts, http.Network(c.Http.Network))
@@ -27,6 +67,6 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	v1.RegisterShopHTTPServer(srv, s)
 	return srv
 }
